# craft-text-detector

./: pyproject.toml  setup.py
craft_onnx/: convert_to_onnx.py  quantize_static.py  test_onnx_model.py  utils.py
onnx/: convert_to_onnx.py
