[tool.poetry]
name = "craft-text-detector"
version = "0.1.0"
description = ""
authors = ["asyafEvinced <asya.frumkin@evinced.com>"]

[tool.poetry.dependencies]
python = "3.9"
torch = "^1.10.1"
torchvision = "^0.11.2"
gdown = "^4.2.0"
numpy = "^1.21.5"
opencv-python = "^4.5.4"
onnx = "^1.10.2"
onnxruntime = "^1.10.0"
onnxconverter-common = "^1.9.0"
flatbuffers = "^2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
